Add a check into the component bootstrap about the JDBC URL value